--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,32 @@
+annotated-types==0.7.0
+anyio==4.9.0
 asgiref==3.8.1
 bleach==6.2.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
+colorama==0.4.6
+distro==1.9.0
 Django==5.1.7
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
+jiter==0.10.0
 kavenegar==1.1.2
+openai==1.97.1
 pillow==11.1.0
+pydantic==2.11.7
+pydantic_core==2.33.2
 PyJWT==2.9.0
+python-magic==0.4.27
 requests==2.32.3
+sniffio==1.3.1
 sqlparse==0.5.3
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.14.1
 tzdata==2025.1
 urllib3==2.3.0
 webencodings==0.5.1
-python-magic==0.4.27
